<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".uii.fragments.Setting_Fragment">


    <ImageButton
        android:id="@+id/se_MenuIcon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="16dp"
        android:text="@string/Setting"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toEndOf="@+id/se_MenuIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioGroup
        android:id="@+id/LanguageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/langBasedOnSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/based_on_system"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15sdp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/theme"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LanguageRadioGroup" />

    <RadioGroup
        android:id="@+id/ThemeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/themeBasedOnSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/based_on_system"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15sdp" />


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>